# gifski-java

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build.sh  pom.xml
jni/: Dockerfile  PngQuant.cpp  PngQuant.h  README.md  build-docker.sh  build.sh  com_badlogicgames_gifski_Gifski.cpp  com_badlogicgames_gifski_Gifski.h  gifski.h
jni/.cargo/: config
jni/gifski-fork/: Cargo.toml  README.md  cargo-config
jni/gifski-fork/src/: c_api.rs  lib.rs
jni/src/: com_badlogicgames_gifski_Gifski.cpp  com_badlogicgames_gifski_Gifski.h
src/main/java/com/badlogicgames/gifski/: Gifski.java  GifskiSettings.java  SharedLibraryLoader.java
src/main/java/com/badlogicgames/pngquant/: PngQuant.java  PngQuantJni.java  SharedLibraryLoader.java
src/main/resources/: libgifski-java64.dylib  libpngquant-java.dylib  libpngquant-java64.dylib
src/test/java/com/badlogicgames/gifski/: GifskiTest.java
src/test/java/com/badlogicgames/pngquant/: GifskiTest.java  PngQuantTest.java
